Fix: .qa-search-field vertical align

--- a/qa-styles.css
+++ b/qa-styles.css
@@ -124,6 +124,7 @@ input[type="text"].qa-search-field {
 	height: 22px;
 	background-color:transparent;
 	border-color:#069;
+	margin-top: 10px;
 }
 
 input[type="text"], input[type="password"], textarea, select {
